force-app/main/default/objects/Card__c/fields/CardHolder__c.field-meta.xml
<CustomField>
    <fullName>CardHolder__c</fullName>
    <description>Card&#39;s holder full name</description>
    <label>CardHolder</label>
    <length>90</length>
    <type>Text</type>
</CustomField>