force-app/main/default/objects/Card__c/fields/CardNumber__c.field-meta.xml
<CustomField>
    <fullName>CardNumber__c</fullName>
    <description>Card&#39;s sequence number</description>
    <label>CardNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>