force-app/main/default/objects/Card__c/fields/CardPinCode__c.field-meta.xml
<CustomField>
    <fullName>CardPinCode__c</fullName>
    <description>Card&#39;s pin code</description>
    <label>CardPinCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>