force-app/main/default/objects/Card__c/fields/CardProductCode__c.field-meta.xml
<CustomField>
    <fullName>CardProductCode__c</fullName>
    <label>CardProductCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>