force-app/main/default/objects/Card__c/fields/CardProducts__c.field-meta.xml
<CustomField>
    <fullName>CardProducts__c</fullName>
    <description>Card&#39;s authorized products (eg: fuel type)</description>
    <label>CardProducts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Unleaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>