force-app/main/default/objects/Card__c/fields/CardServiceCode__c.field-meta.xml
<CustomField>
    <fullName>CardServiceCode__c</fullName>
    <label>CardServiceCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>