force-app/main/default/objects/Card__c/fields/CardServices__c.field-meta.xml
<CustomField>
    <fullName>CardServices__c</fullName>
    <description>Card&#39;s activated services</description>
    <label>CardServices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carwash</fullName>
            </value>
            <value>
                <fullName>Shop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>