force-app/main/default/objects/Card__c/fields/IsKmTracked__c.field-meta.xml
<CustomField>
    <fullName>IsKmTracked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>&quot;Saisie des Km&quot;</description>
    <label>IsKmTracked</label>
    <type>Checkbox</type>
</CustomField>