force-app/main/default/objects/Card__c/fields/IsPinCodeProvided__c.field-meta.xml
<CustomField>
    <fullName>IsPinCodeProvided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Subscriber chose pin code?</description>
    <label>IsPinCodeProvided</label>
    <type>Checkbox</type>
</CustomField>